Updated the look of the pages, updated TODO list, and tested out a db backup

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,6 +11,8 @@ TODO
   - form validation for comment submission
   - asap fix js injection
   - database backup functionality
+    - write a program that makes a mysqldump every day or so?
+  - make it mobile-friendly
 
 DONE
   - fix CSS conflicts
